@@ -1,1 +1,0 @@
-bin/trytond-webdav @PREFIX@/bin/trytond-webdav@PYVERSSUFFIX@
