@@ -1,1 +1,0 @@
-The webdav module of the Tryton application platform.
