@@ -1,53 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2016/12/04 21:13:09 rodent Exp $
-bin/trytond-webdav${PYVERSSUFFIX}
-${PYSITELIB}/trytond/modules/webdav/__init__.py
-${PYSITELIB}/trytond/modules/webdav/__init__.pyc
-${PYSITELIB}/trytond/modules/webdav/__init__.pyo
-${PYSITELIB}/trytond/modules/webdav/locale/bg.po
-${PYSITELIB}/trytond/modules/webdav/locale/ca.po
-${PYSITELIB}/trytond/modules/webdav/locale/cs.po
-${PYSITELIB}/trytond/modules/webdav/locale/de.po
-${PYSITELIB}/trytond/modules/webdav/locale/es.po
-${PYSITELIB}/trytond/modules/webdav/locale/es_419.po
-${PYSITELIB}/trytond/modules/webdav/locale/fr.po
-${PYSITELIB}/trytond/modules/webdav/locale/hu_HU.po
-${PYSITELIB}/trytond/modules/webdav/locale/it_IT.po
-${PYSITELIB}/trytond/modules/webdav/locale/ja_JP.po
-${PYSITELIB}/trytond/modules/webdav/locale/lo.po
-${PYSITELIB}/trytond/modules/webdav/locale/lt.po
-${PYSITELIB}/trytond/modules/webdav/locale/nl.po
-${PYSITELIB}/trytond/modules/webdav/locale/pl.po
-${PYSITELIB}/trytond/modules/webdav/locale/pt_BR.po
-${PYSITELIB}/trytond/modules/webdav/locale/ru.po
-${PYSITELIB}/trytond/modules/webdav/locale/sl.po
-${PYSITELIB}/trytond/modules/webdav/locale/zh_CN.po
-${PYSITELIB}/trytond/modules/webdav/protocol.py
-${PYSITELIB}/trytond/modules/webdav/protocol.pyc
-${PYSITELIB}/trytond/modules/webdav/protocol.pyo
-${PYSITELIB}/trytond/modules/webdav/server.py
-${PYSITELIB}/trytond/modules/webdav/server.pyc
-${PYSITELIB}/trytond/modules/webdav/server.pyo
-${PYSITELIB}/trytond/modules/webdav/tests/__init__.py
-${PYSITELIB}/trytond/modules/webdav/tests/__init__.pyc
-${PYSITELIB}/trytond/modules/webdav/tests/__init__.pyo
-${PYSITELIB}/trytond/modules/webdav/tests/test_webdav.py
-${PYSITELIB}/trytond/modules/webdav/tests/test_webdav.pyc
-${PYSITELIB}/trytond/modules/webdav/tests/test_webdav.pyo
-${PYSITELIB}/trytond/modules/webdav/tryton.cfg
-${PYSITELIB}/trytond/modules/webdav/view/attachment_form.xml
-${PYSITELIB}/trytond/modules/webdav/view/collection_form.xml
-${PYSITELIB}/trytond/modules/webdav/view/collection_list.xml
-${PYSITELIB}/trytond/modules/webdav/view/collection_tree.xml
-${PYSITELIB}/trytond/modules/webdav/view/share_form.xml
-${PYSITELIB}/trytond/modules/webdav/view/share_list.xml
-${PYSITELIB}/trytond/modules/webdav/webdav.py
-${PYSITELIB}/trytond/modules/webdav/webdav.pyc
-${PYSITELIB}/trytond/modules/webdav/webdav.pyo
-${PYSITELIB}/trytond/modules/webdav/webdav.xml
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/entry_points.txt
-${PYSITELIB}/${EGG_INFODIR}/not-zip-safe
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
